# tiny-llm-edge-bench

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
configs/: hardware.yaml  models.yaml  quants.yaml  tasks.yaml
data/golden/: human_ratings.csv  mmlu_subset.json  predicted_responses.json  ragas_golden.json
data/prompts/: instruction_follow.json  json_following.json  standard.json
notebooks/: 01_explore_results.ipynb  02_pareto_analysis.ipynb
scripts/: download_mmlu_subset.py  download_models.py  generate_report.py  quantize_awq.py  repatch_instruction_follow.py  run_bench.py  run_full_matrix.sh  run_p1_integration.py  run_quality_dod.py  run_speculative_bench.py
src/: cli.py  config.py
src/analysis/: aggregate.py  pareto.py  report.py
src/benchmarks/: memory.py  power.py  power_analytical.py  power_mac.py  profiling.py  quality.py  throughput.py
src/inference/: awq_backend.py  base.py  chat_templates.py  llama_cpp_backend.py  mlx_backend.py
src/mcu/: README.md  __init__.py  cmsis_nn_energy.py  export.py  renode_runner.py
src/registry/: downloader.py  fingerprint.py  hardware.py  models.py  tasks.py
src/tasks/: base.py  instruction_follow.py  json_following.py  mmlu_subset.py  ragas_human_audit.py  ragas_industrial.py
tests/: conftest.py  test_aggregate.py  test_awq_backend.py  test_cmsis_nn_energy.py  test_inference_backends.py  test_pareto.py  test_profiling.py  test_quality_integration.py  test_registry.py  test_tasks.py
(+6 files in other folders)
