[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-llm-edge-bench"
version = "0.1.0"
description = "Benchmark small open-source LLMs on consumer/edge hardware"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "pyyaml>=6",
    "huggingface_hub>=0.23",
    "psutil>=5.9",
    "matplotlib>=3.9",
    "streamlit>=1.36",
    "llama-cpp-python>=0.2.80",
]

[project.optional-dependencies]
apple = ["mlx-lm>=0.14"]
data = ["datasets>=2.19"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-psutil",
]

[project.scripts]
tiny-bench = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
